# mentamind

./: .env.example  .gitignore  README.md  TASK LIST ADITYA.md  docker-compose.yml  missing.md  package-lock.json  package.json  plan.md  pnpm-lock.yaml  qa_test_admin.py  qa_test_chat.py  qa_test_coach.py  qa_test_mindful.py  qa_test_notifications.py  qa_test_screening.py  rebuild.bat  rebuild.sh  render.yaml  test_frontend.py  test_req.py  tsconfig.base.json  turbo.json
apps/api/: Dockerfile  alembic.ini  check.py  pyproject.toml  test_auth.py  test_login.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_baseline.py  0002_auth_schema.py  0003_mood_wellness_appointments.py  0004_fk_indexes_varchar_enums.py  0005_consent_records.py  0006_notification_events.py  0007_invitations.py  0008_mood_context_tag.py  0009_update_burnout_risk.py  05da859c0793_add_chat_models.py  2026_07_14_add_energy_stress.py  2026_07_14_add_new_roles.py  2026_07_14_add_profile_fields.py  2026_07_15_add_assessment_bank.py  2026_07_15_add_is_verified.py  (+17 more)
apps/api/app/: database.py  db_types.py  main.py  settings.py
apps/api/scripts/: cron_scheduler.py  seed.py  seed_meditations.py
apps/api/tests/: conftest.py  test_auth.py  test_data_contracts.py  test_encryption.py  test_forum_tenancy.py  test_health.py  test_invitations.py  test_invitations_integration.py  test_notifications.py  test_notifications_integration.py  test_onboarding.py  test_rbac.py  test_register_org.py  test_screening_ghost_gate.py  test_security.py  test_security_integration.py  test_tenancy.py
(+216 files in other folders)
